--- a/topheader/topheader.css
+++ b/topheader/topheader.css
@@ -185,25 +185,127 @@ flex:1;
     padding-left: 550px;
  }
  .youmaybeinterested{
+
 display: flex;
-    background-color: #d6ecf3;
+position: absolute;
  }
- .dimageyou{
-    flex: 1;
-    position: relative;
-    padding-top: 20%;
- }
- .dimageyou img{
-    padding-left: 10px;
-    width:95%;
+
+ .dimageyou img {
+    
+    width:60%;
  }
  .dimageyou p{
-    padding-left: 10px;
-    width:80%;
+    padding-right: 50px;
+    width:70%;
  }
- #youmaybe{
-    padding-left: 500px;
- }
+
  .back{
-    position: absolute;
+    display: flex;
+
  }
+ .back img{
+    padding-top: 15%;
+    width:96%;
+    padding-right:  25px;
+ }
+
+ #youmay{
+    padding-left: 400px;
+ }
+ .newsletter{
+    
+    padding-left: 150px;
+    padding-bottom: 100px;
+    font-size: x-large;
+ }
+ #footer{
+    padding-top: 30px;
+    width: 100%;
+    height: 50vh;
+    background: #F9FAFA;
+ 
+}
+#footer-top-1{
+    display: flex;
+    height: 27vh;
+    justify-content: space-between;
+    align-items: end;
+}
+#footer-logo{
+    width: 200px;
+}
+#footer-logo-txt{
+    width: fit-content;
+    height: fit-content;
+    margin-bottom: 3px;
+    margin-left: 80px;
+   
+}
+#footer-top-text{
+    font-size: 13px;
+}
+#footer-aboutgg{
+    width: fit-content;
+    margin-left: 250px;
+    margin-bottom: 2px;
+ 
+}
+.footer-write-t-list{
+    display: flex;
+}
+.footer-write-t{
+    padding-left: 15px;
+}
+.footer-write-txt{
+    font-size: 13px;
+    padding: 15px;
+    line-height: 20px;
+}
+#footer-lagal{width:300px;
+    width: fit-content;
+    margin-right: 80px;
+    margin-bottom: 2px;
+}
+ 
+ 
+ 
+ 
+#footer-bottom-1{
+    display: flex;
+    justify-content: space-between;
+}
+#footer-address{
+    display: flex;
+    align-items: top;
+    justify-content: center;
+    margin-left: 70px;
+   
+}
+#footer-phone{
+    display: flex;
+    align-items: top;
+    justify-content: center;
+}
+#footer-media{
+    margin-right: 145px;
+    margin-top: 15px;
+}
+#footer-mail{
+    display: flex;
+    align-items: top;
+    justify-content: center;
+    margin-left: 50px;
+}
+#br-footer{
+    line-height: 2px;
+}
+#media-icons{
+    margin-top: 10px;
+}
+.footer-small-images{
+   width: 13px;
+}
+.footer-write-txt-content{
+    padding:15px !important;
+}
+ 
