--- a/topheader/topheader.css
+++ b/topheader/topheader.css
@@ -308,4 +308,76 @@ position: absolute;
 .footer-write-txt-content{
     padding:15px !important;
 }
+
+maybe-interested-div {
+    margin-top: 170px;
+  }
+  .maybe-interested-div h2 {
+    text-align: center;
+  }
+  .interested-imageClass {
+    display: flex;
+    margin-left: 60px;
+    position: absolute;
+  }
+  .interested-img {
+    width: 350px;
+    margin-right: 20px;
+  }
+  a {
+    text-decoration: none;
+  }
+   
+  /* Subscribe */
+  .bottom-white-background {
+    position: absolute;
+    width: 1150px;
+    height: 150px;
+    margin-top: 300px;
+    margin-left: 60px;
+    background-color: white;
+    /* justify-content: center; */
+    align-items: center;
+    border-radius: 2px;
+  }
+  .newsletter-box {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 40px;
+  }
+  #texxt {
+    border: 0px;
+    width: 300px;
+  }
+  .newsletter-box-text {
+    margin-left: 80px;
+  }
+  .newsletter-textAndButtonClass {
+    margin-right: 80px;
+  }
+  .Subscribe-button {
+    background-color: rgb(82, 177, 138);
+    color: white;
+    font-size: small;
+    border: green;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 110px;
+    height: 35px;
+    margin-top: 4px;
+  }
+   
+  .bottom-white-background img {
+    position: absolute;
+    height: 140px;
+    width: 600px;
+    bottom: 10px;
+  }
+  .bottom-back {
+    background-color: #eaf2ff;
+    height: 550px;
+    margin-top: 120px;
+  }
+  
  
